[omnibox] Return reference to ImageView instead of LocationIconView

Return a reference to the contained ImageView (the padlock) instead of
the parent LocationIconView. The latter is quite wide when we fill in
the label half of it, which we now do with site security level in some
cases. The bubble (in the bug that is in the wrong place)  anchors to
the middle of whatever View you return to it, so we really want to
give it the padlock here.

BUG=644222

Review-Url: https://codereview.chromium.org/2328983002
Cr-Commit-Position: refs/heads/master@{#417932}